--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -588,7 +588,7 @@
 
 
         <section class="container my-5 contact-section">
-            <h3 class="text-center mb-4" id="contacto">DONDE ENCONTRARNOS</h3>
+            <h3 class="text-center mb-4" id="contacto">DÓNDE ENCONTRARNOS</h3>
 
             <div class="row g-4 align-items-start justify-content-center">
                 <!-- Mapa -->
