--- a/veterinaria/app/templates/servicios.html
+++ b/veterinaria/app/templates/servicios.html
@@ -12,7 +12,7 @@
 <body>
     {% include 'navbar-panel.html' %}
 
-    <main class="container mt-5 mb-5 p-3">
+    <main class="container-fluid mt-5 mb-5 p-4">
         <div class="row g-4">
             <!-- Columna izquierda: Formulario crear/editar -->
             <div class="col-12 col-lg-4">
